# compare-turbo-module-rn

./: App.tsx  LICENSE  README.md  app.json  index.js  package.json
RTNCalculator/: package.json
RTNCalculator/android/: build.gradle
RTNCalculator/android/src/main/java/com/rtncalculator/: CalculatorModule.java  CalculatorPackage.java  WritableMapUtils.java
RTNCalculator/js/: NativeCalculator.ts
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/debug/java/com/turbomoduleusage0725/: ReactNativeFlipper.java
android/app/src/main/java/com/turbomoduleusage0725/: JSONObjectUtil.java  MainActivity.java  MainApplication.java  WritableMapUtils.java
android/app/src/main/java/com/turbomoduleusage0725/rn_vanilla_native_modules/: AdapterJSIModule.java  CustomReactPackage.java  OldCalculatorModule.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/turbomoduleusage0725/: ReactNativeFlipper.java
ios/: Podfile
ios/TurboModuleUsage0725/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/TurboModuleUsage0725.xcodeproj/: project.pbxproj
ios/TurboModuleUsage0725.xcodeproj/xcshareddata/xcschemes/: TurboModuleUsage0725.xcscheme
ios/TurboModuleUsage0725Tests/: TurboModuleUsage0725Tests.m
